flang/test/Semantics/cuf11.cuf
! RUN: %python %S/test_errors.py %s %flang_fc1

subroutine sub1()
  real, device :: adev(10), bdev(10)
  real :: ahost(10)

!ERROR: More than one reference to a CUDA object on the right hand side of the assigment
  ahost = adev + bdev

  ahost = adev + adev

end subroutine
